# silky

./: .gitignore  README.md  compose.yaml
service/: .gitignore  Cargo.toml  README.md  bacon.toml
service/config/: base.yaml  development.yaml  testing.yaml
service/migrations/: 20260614091204_create_users_table.down.sql  20260614091204_create_users_table.up.sql  20260625121939_create_roles_table.down.sql  20260625121939_create_roles_table.up.sql  20260625142120_create_permissions_table.down.sql  20260625142120_create_permissions_table.up.sql  20260625143703_create_roles_permissions_table.down.sql  20260625143703_create_roles_permissions_table.up.sql  20260625150315_create_users_roles_table.down.sql  20260625150315_create_users_roles_table.up.sql  20260626080054_create_categories_table.down.sql  20260626080054_create_categories_table.up.sql
service/src/: app.rs  commands.rs  context.rs  lib.rs
service/src/config/: log.rs  mailer.rs  mod.rs
service/src/controllers/: auth.rs  categories.rs  mod.rs  roles.rs
service/src/data/: categories.json  permissions.json  roles.json  rolesPermission.json  userRoles.json  users.json
service/src/error/: mod.rs  response.rs
service/src/mailer/: auth.rs  mod.rs
service/src/middlewares/: auth.rs  mod.rs  rbac.rs  trace.rs
service/src/models/: categories.rs  error.rs  mod.rs  permissions.rs  roles.rs  roles_permissions.rs  seed.rs  user.rs  user_roles.rs
service/src/schemas/: auth.rs  categories.rs  mod.rs  request.rs  roles.rs  validator.rs
service/src/utils/: mod.rs  request.rs
service/src/views/: auth.rs
service/src/workers/: mail.rs  mod.rs
service/templates/: forgot.hbs  welcome.hbs
service/templates/layouts/: base.hbs
service/templates/partials/: styles.hbs
service/tests/: mod.rs
service/tests/config/: mod.rs
service/tests/middlewares/: rbac.rs
service/tests/middlewares/snapshots/rbac/: can_access_route_when_role_has_permission@rbac.snap  cannot_access_route_when_role_lacks_permission@rbac.snap  cannot_access_route_without_credentials@rbac.snap
service/tests/models/: categories.rs  mod.rs  permissions.rs  roles.rs  roles_permissions.rs  seed.rs  user.rs  user_roles.rs
service/tests/models/snapshots/categories/: can_create_category_and_normalize_name@categories.snap  can_create_category_with_description@categories.snap  can_create_category_without_description@categories.snap  can_delete_category@categories.snap  can_find_all_categories_and_clamp_large_limit@categories.snap  can_find_all_categories_and_clamp_low_values@categories.snap  can_find_all_categories_when_empty@categories.snap  can_find_all_categories_with_default_pagination@categories.snap  can_find_all_categories_with_first_page@categories.snap  can_find_all_categories_with_second_page@categories.snap  can_find_category_by_normalized_name@categories.snap  can_find_shoes_category_by_pid@categories.snap  can_find_tshirts_category_by_pid@categories.snap  can_seed_categories_from_json@categories.snap  can_update_category@categories.snap  can_update_category_and_normalize_name@categories.snap  can_update_category_name_only@categories.snap  can_update_category_with_name_image_and_description@categories.snap  can_update_category_with_same_name@categories.snap  cannot_create_category_when_name_already_exists@categories.snap  cannot_delete_category_when_pid_does_not_exist@categories.snap  cannot_find_category_when_name_does_not_exist@categories.snap  cannot_update_category_when_name_already_exists@categories.snap  when_seed_file_does_not_exist_category_seeding_fails@categories.snap
service/tests/models/snapshots/permissions/: can_find_all_permissions_for_administrator@permissions.snap  can_find_permission_list@permissions.snap  can_find_permission_list_by_role@permissions.snap  can_find_permissions_read_permission_by_pid@permissions.snap  can_find_roles_create_permission_by_pid@permissions.snap  can_find_roles_read_permission_by_pid@permissions.snap  can_find_roles_write_permission_by_pid@permissions.snap  can_grant_permission_when_customer_role_has_permission@permissions.snap  can_seed_permissions_from_json@permissions.snap  cannot_find_permission_when_pid_does_not_exist@permissions.snap  cannot_grant_permission_when_assigned_role_lacks_permission@permissions.snap  when_seed_file_does_not_exist_permission_seeding_fails@permissions.snap
service/tests/requests/: auth.rs  categories.rs  mod.rs  roles.rs
service/tests/schemas/: auth.rs  categories.rs  mod.rs  request.rs  roles.rs
service/tests/utils/: auth.rs  mod.rs  redactions.rs
(+196 files in other folders)
