[package]
name = "service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "service"
path = "src/bin/main.rs"

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
config = { version = "0.15.23", features = ["yaml"] }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "chrono", "uuid", "runtime-tokio", "tls-native-tls"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-appender = "0.2.5"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "serde"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
