[package]
name = "service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "service"
path = "src/bin/main.rs"

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
config = { version = "0.15.23", features = ["yaml"] }
hex = "0.4.3"
jsonwebtoken = { version = "10.4.0", features = ["rsa", "aws-lc-rs"] }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.27"
serde_json = "1.0.150"
serial_test = "3.5.0"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = [
  "postgres",
  "chrono",
  "uuid",
  "runtime-tokio",
  "tls-native-tls",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-appender = "0.2.5"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "serde"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.48.0", features = ["redactions", "filters"] }
rstest = "0.26.1"
serial_test = "3.5.0"
